@@ -7,6 +7,7 @@
 
 2010-05-29  Steffen Kamper  <info@sk-typo3.de>
 
+	* Fixed bug #14518: HCI: Page "with root-flag" set should have "domain"-icon (Thanks to Steffen Ritter)
 	* Fixed bug #14519: Toolbar menuitems alignment
 	* Fixed bug #14512: Remove "bigButtons" by default in Page module (Thanks to Steffen Gebert)
 	* Fixed bug #10377: Cleaning and linting typo3/js-scripts
